<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <TextView
        android:id="@+id/tvUpdatedAtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/update_time_info"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/tvUpdatedAtValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/tvUpdatedAtInfo"
        app:layout_constraintStart_toEndOf="@+id/tvUpdatedAtInfo" />

    <TextView
        android:id="@+id/tvCityInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/city_name_info"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvUpdatedAtInfo" />

    <TextView
        android:id="@+id/tvCityValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/tvCityInfo"
        app:layout_constraintStart_toEndOf="@+id/tvCityInfo" />

    <TextView
        android:id="@+id/tvTemperatureInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/temp_info"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvCityInfo" />

    <TextView
        android:id="@+id/tvTemperatureValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTemperatureInfo"
        app:layout_constraintStart_toEndOf="@+id/tvTemperatureInfo" />

    <TextView
        android:id="@+id/tvDescryptionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/description_info"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvTemperatureInfo" />

    <TextView
        android:id="@+id/tvPressureInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/pressure_info"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvDescryptionInfo" />

    <TextView
        android:id="@+id/tvHumidityInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/humidity_info"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvPressureInfo" />

    <TextView
        android:id="@+id/tvWindSpeedInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/wind_speed_info"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvHumidityInfo" />

    <TextView
        android:id="@+id/tvWindDirectionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/wind_direction_info"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvWindSpeedInfo" />

    <TextView
        android:id="@+id/tvSunriseInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sunrise_time_info"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvWindDirectionInfo" />

    <TextView
        android:id="@+id/tvSunsetInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sunset_time_info"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvSunriseInfo" />

    <TextView
        android:id="@+id/tvDescriptionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/tvDescryptionInfo"
        app:layout_constraintStart_toEndOf="@+id/tvDescryptionInfo" />

    <TextView
        android:id="@+id/tvPressureValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/tvPressureInfo"
        app:layout_constraintStart_toEndOf="@+id/tvPressureInfo" />

    <TextView
        android:id="@+id/tvHumidityValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/tvHumidityInfo"
        app:layout_constraintStart_toEndOf="@+id/tvHumidityInfo" />

    <TextView
        android:id="@+id/tvWindSpeedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/tvWindSpeedInfo"
        app:layout_constraintStart_toEndOf="@+id/tvWindSpeedInfo" />

    <TextView
        android:id="@+id/tvWindDirectionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/tvWindDirectionInfo"
        app:layout_constraintStart_toEndOf="@+id/tvWindDirectionInfo" />

    <TextView
        android:id="@+id/tvSunriseTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/tvSunriseInfo"
        app:layout_constraintStart_toEndOf="@+id/tvSunriseInfo" />

    <TextView
        android:id="@+id/tvSunsetTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/tvSunsetInfo"
        app:layout_constraintStart_toEndOf="@+id/tvSunsetInfo" />

    <Button
        android:id="@+id/btnRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFetchData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fetch"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/fragment"
        android:name="edu.kacprzak.weatherapp.FragmentSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fragment2"
        app:layout_constraintStart_toStartOf="parent" />

    <fragment
        android:id="@+id/fragment2"
        android:name="edu.kacprzak.weatherapp.FragmentWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <fragment
        android:id="@+id/fragment3"
        android:name="edu.kacprzak.weatherapp.FragmentForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragment2" />


</androidx.constraintlayout.widget.ConstraintLayout>